fix error text in dark mode (now actually white)

--- a/css/articles.css
+++ b/css/articles.css
@@ -580,7 +580,6 @@ body.dark .article-text {
 
 body.dark #top {
   background-color: #761A2F;
-  color: white;
   -webkit-transition: .2s;
   transition: .2s;
 }
@@ -590,7 +589,7 @@ body.dark #top {
 }
 
 body.dark #construction {
-  color: black;
+  color: white;
 }
 
 #construction {
